@@ -96,8 +96,8 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-09-06 13:02:12 L.116'39468 T1819795758.K ~731 +----+----+----+----+----+
-     TimeCnt : //z 2015-09-05 20:38:27 L.117'12093 T1845101210.K ~31  +----+----+----+----+----+
+     Zndex_E : //z 2015-09-07 09:52:39 L.115'50841 T1383630018.K ~737 +----+----+----+----+----+
+     TimeCnt : //z 2015-09-07 09:52:04 L.115'50876 T1383629914.K ~32  +----+----+----+----+----+
      Reg.Cnt : //z 2015-08-18 18:06:06 L.135'21234 T728764508 .K ~28  +----+----+----+----+----+
      #28  R+ : //z 2015-08-18 18:06:06 L.135'21234 T728764508 .K ~28    V+.653  L+.691  
      #27  R+ : //z 2015-08-13 17:31:56 L.140'23284 T3396635193.K ~27    V+.583  L+.642  
@@ -131,7 +131,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-09-06 13:02:12 L.116'39468 T1819795758.K ~759   R+.19   L+.461  --+----+
+     Version : //z 2015-09-07 09:52:39 L.115'50841 T1383630018.K ~765   R+.28   L+.799  --+----+
+     #40  V+ : //z 2015-09-07 09:52:04 L.115'50876 T1383629914.K ~760   R+.28   L+.798  
      #39  V+ : //z 2015-09-04 22:39:16 L.118'4844  T65304378  .K ~741   R+.28   L+.779  
      #38  V+ : //z 2015-08-25 17:58:14 L.128'21706 T1477339359.K ~722   R+.28   L+.757  
      #37  V+ : //z 2015-08-25 17:49:09 L.128'22251 T1476189347.K ~703   R+.28   L+.738  
@@ -793,4 +794,8 @@ http://ftp.train2game.com/showthread.php/20147-Useful-Link-For-DirectX-9-Tutoria
 
 一些game相关的代码
 https://github.com/bagobor?tab=repositories
+
+//z 2015-09-07 09:52:04 L.115'50876 T1383629914.K[T32,L797,R28,V760]
+Antialiasing: Wu Algorithm，彩色版本
+http://www.suchit-tiwari.org/download/aawu.c
 #endregion //z 2015-08-18 18:06:06 L.135'21234 BG57IV3@XCL T728764508 .K.F4146951713-+----+----+
